Fix safari stretch issue https://github.com/MathSocUNSW/MathSocUNSW.github.io/issues/5

--- a/assets/css/mathsoc.scss
+++ b/assets/css/mathsoc.scss
@@ -180,6 +180,7 @@
 	flex-wrap: wrap;
 	width: 500px;
 	margin: 10px;
+    align-items: flex-start;
   }
 
 .events-pic {
